# fiss-mcp

./: .gitignore  CLAUDE.md  README.md  codecov.yml  pyproject.toml  requirements.txt
.github/workflows/: test.yml
src/terra_mcp/: __init__.py  server.py
tests/: test_server.py
